# restapi/operations/user/login_user_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package user
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	apimodel "github.com/adasiunas/bello-auth/apimodel"
+)
+
+// LoginUserOKCode is the HTTP code returned for type LoginUserOK
+const LoginUserOKCode int = 200
+
+/*LoginUserOK User successfully registered
+
+swagger:response loginUserOK
+*/
+type LoginUserOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *apimodel.TokenResponse `json:"body,omitempty"`
+}
+
+// NewLoginUserOK creates LoginUserOK with default headers values
+func NewLoginUserOK() *LoginUserOK {
+
+	return &LoginUserOK{}
+}
+
+// WithPayload adds the payload to the login user o k response
+func (o *LoginUserOK) WithPayload(payload *apimodel.TokenResponse) *LoginUserOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the login user o k response
+func (o *LoginUserOK) SetPayload(payload *apimodel.TokenResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *LoginUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// LoginUserBadRequestCode is the HTTP code returned for type LoginUserBadRequest
+const LoginUserBadRequestCode int = 400
+
+/*LoginUserBadRequest Bad request payload
+
+swagger:response loginUserBadRequest
+*/
+type LoginUserBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *apimodel.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewLoginUserBadRequest creates LoginUserBadRequest with default headers values
+func NewLoginUserBadRequest() *LoginUserBadRequest {
+
+	return &LoginUserBadRequest{}
+}
+
+// WithPayload adds the payload to the login user bad request response
+func (o *LoginUserBadRequest) WithPayload(payload *apimodel.ErrorResponse) *LoginUserBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the login user bad request response
+func (o *LoginUserBadRequest) SetPayload(payload *apimodel.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *LoginUserBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// LoginUserInternalServerErrorCode is the HTTP code returned for type LoginUserInternalServerError
+const LoginUserInternalServerErrorCode int = 500
+
+/*LoginUserInternalServerError Service down
+
+swagger:response loginUserInternalServerError
+*/
+type LoginUserInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *apimodel.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewLoginUserInternalServerError creates LoginUserInternalServerError with default headers values
+func NewLoginUserInternalServerError() *LoginUserInternalServerError {
+
+	return &LoginUserInternalServerError{}
+}
+
+// WithPayload adds the payload to the login user internal server error response
+func (o *LoginUserInternalServerError) WithPayload(payload *apimodel.ErrorResponse) *LoginUserInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the login user internal server error response
+func (o *LoginUserInternalServerError) SetPayload(payload *apimodel.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *LoginUserInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
