# swagger.json
@@ -95,6 +95,44 @@
         }
       }
     },
+    "/v1/user/login": {
+      "post": {
+        "description": "Login user",
+        "tags": [
+          "User"
+        ],
+        "operationId": "loginUser",
+        "parameters": [
+          {
+            "name": "Login",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/LoginRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User successfully registered",
+            "schema": {
+              "$ref": "#/definitions/TokenResponse"
+            }
+          },
+          "400": {
+            "description": "Bad request payload",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "500": {
+            "description": "Service down",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }
+        }
+      }
+    },
     "/v1/resource": {
       "get": {
         "description": "Test auth resource",
@@ -143,6 +181,7 @@
             "Unauthorized",
             "NotFound",
             "UserAlreadyExists",
+            "IncorrectCredentials",
             "BadRequest"
           ]
         }
@@ -161,6 +200,23 @@
       }
     },
     "RegistrationRequest": {
+      "type": "object",
+      "required": [
+        "email",
+        "password"
+      ],
+      "properties": {
+        "email": {
+          "type": "string",
+          "x-nullable": false
+        },
+        "password": {
+          "type": "string",
+          "x-nullable": false
+        }
+      }
+    },
+    "LoginRequest": {
       "type": "object",
       "required": [
         "email",
